[package]
name = "c10k-rs"
version = "0.1.0"
authors = ["Rg <daimaldd@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "*"
futures-preview = "0.3.0-alpha.14"
tokio-io-pool = "*"
runtime = "0.3.0-alpha.2"
async-timer = {"git" = "https://github.com/DoumanAsh/async-timer.git"}
rand = "0.6"
net2 = "0.2.33"
parking_lot = "0.7.1"
farmhash = "1.1.5"
tide = "0.1.1"
serde_derive = "*"
serde = {version = "1.0", feature = ["derive"]}
serde_json = "*"
